Make Eclipse stop giving warnings